--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ p {
 
 h1 {
     display: inline-block;
-/*     width: 23ch; */
+    width: 13ch;
     overflow: hidden;
     white-space: nowrap;
     font-weight: 400;
@@ -302,6 +302,9 @@ textarea {
         margin-top: 50%;
     }
     input {
+    width: 80%;
+    }
+    textarea {
     width: 80%;
     }
     /* .pr-img {
